Fix for misalignment of site nav

--- a/_sass/_global.scss
+++ b/_sass/_global.scss
@@ -39,7 +39,7 @@
 
 .site-nav {
   list-style: none;
-  margin: 0 0 0 auto;
+  margin: 0 -0.625rem 0 auto;
   padding: 0;
 
   li {
